# wordle_py

./: README.md  main.py  pyproject.toml  requirements.txt  words.py
.devcontainer/: devcontainer.json
src/wordle/: __init__.py  bot.py  player.py  util.py  words.py  words_original.py
tests/: test_wordle_py.py
