[tool.poetry]
name = "wordle_py"
version = "0.1.0"
description = ""
authors = ["Stephen Heindel <stephen.heindel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.12b0"
rich = "^11.0.0"
dateparser = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
